--- a/style.css
+++ b/style.css
@@ -112,3 +112,18 @@ body {
   color: rgb(190, 188, 188);
   font-weight: 200;
 }
+.contact-info.skills .percent {
+  position: relative;
+  width: 100%;
+  height: 6px;
+  background: rgb(13, 13, 34);
+  display: block;
+  margin-top: 5px;
+}
+.contact-info.skills .percent div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+}
