--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: sans-serif;
 }
 body {
-  background: lightgray;
+  background: lightslategray;
   display: flex;
   justify-content: center;
   align-items: center;
